--- a/package.json
+++ b/package.json
@@ -16,19 +16,26 @@
         "@types/express": "^5.0.3",
         "@types/node": "^24.0.10",
         "@types/react": "^19.1.8",
+        "@types/react-calendar": "^4.1.0",
         "@types/react-dom": "^19.1.6",
+        "@types/react-router-dom": "^5.3.3",
         "@types/uuid": "^10.0.0",
         "express": "^5.1.0",
         "express.js": "^1.0.0",
         "fs": "^0.0.1-security",
+        "lorem-ipsum": "^2.0.8",
         "react": "^19.1.0",
+        "react-calendar": "^6.0.0",
         "react-dom": "^19.1.0",
+        "react-router-dom": "^7.6.3",
         "ts-loader": "^9.5.2",
         "uuid": "^11.1.0",
         "webpack": "^5.99.9",
         "webpack-cli": "^6.0.1"
     },
     "devDependencies": {
+        "css-loader": "^7.1.2",
+        "style-loader": "^4.0.0",
         "webpack-dev-server": "^5.2.2"
     }
 }
