--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "description": "",
     "dependencies": {
         "@tiptap/extension-color": "^2.25.0",
+        "@tiptap/extension-image": "^2.25.0",
         "@tiptap/pm": "^2.25.0",
         "@tiptap/react": "^2.25.0",
         "@tiptap/starter-kit": "^2.25.0",
@@ -33,6 +34,7 @@
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.6.3",
         "tiptap-extension-figure": "^1.0.0",
+        "tiptap-extension-resize-image": "^1.2.2",
         "ts-loader": "^9.5.2",
         "uuid": "^11.1.0",
         "webpack": "^5.99.9",
