--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "@tiptap/extension-color": "^2.25.0",
-        "@tiptap/extension-image": "^2.25.0",
-        "@tiptap/pm": "^2.25.0",
-        "@tiptap/react": "^2.25.0",
-        "@tiptap/starter-kit": "^2.25.0",
+        "@tiptap/core": "^3.0.1",
+        "@tiptap/extension-color": "^3.0.1",
+        "@tiptap/extension-image": "^3.0.1",
+        "@tiptap/extension-table": "^3.0.1",
+        "@tiptap/extension-table-cell": "^3.0.1",
+        "@tiptap/extension-table-header": "^3.0.1",
+        "@tiptap/extension-table-row": "^3.0.1",
+        "@tiptap/pm": "^3.0.1",
+        "@tiptap/react": "^3.0.1",
+        "@tiptap/starter-kit": "^3.0.1",
         "@types/express": "^5.0.3",
         "@types/node": "^24.0.10",
         "@types/react": "^19.1.8",
@@ -33,8 +38,6 @@
         "react-calendar": "^6.0.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.6.3",
-        "tiptap-extension-figure": "^1.0.0",
-        "tiptap-extension-resize-image": "^1.2.2",
         "ts-loader": "^9.5.2",
         "uuid": "^11.1.0",
         "webpack": "^5.99.9",
