--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
         "@tiptap/react": "^3.0.1",
         "@tiptap/starter-kit": "^3.0.1",
         "@types/express": "^5.0.3",
+        "@types/express-session": "^1.18.2",
         "@types/node": "^24.0.10",
+        "@types/passport": "^1.0.17",
         "@types/react": "^19.1.8",
         "@types/react-calendar": "^4.1.0",
         "@types/react-dom": "^19.1.6",
         "@types/react-router-dom": "^5.3.3",
         "@types/uuid": "^10.0.0",
         "express": "^5.1.0",
+        "express-session": "^1.18.1",
         "express.js": "^1.0.0",
         "fs": "^0.0.1-security",
         "lorem-ipsum": "^2.0.8",
+        "passport": "^0.7.0",
+        "passport-ldapauth": "^3.0.1",
         "react": "^19.1.0",
         "react-calendar": "^6.0.0",
         "react-dom": "^19.1.0",
