--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@tiptap/starter-kit": "^3.0.1",
         "@types/express": "^5.0.3",
         "@types/express-session": "^1.18.2",
+        "@types/ldapjs": "^3.0.6",
         "@types/node": "^24.0.10",
         "@types/passport": "^1.0.17",
         "@types/react": "^19.1.8",
@@ -36,6 +37,7 @@
         "express-session": "^1.18.1",
         "express.js": "^1.0.0",
         "fs": "^0.0.1-security",
+        "ldapjs": "^3.0.7",
         "lorem-ipsum": "^2.0.8",
         "passport": "^0.7.0",
         "passport-ldapauth": "^3.0.1",
